--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Ravikumar RD\AppData\Local\Temp\testng-eclipse-273425783\testng-customsuite.xml</span>
+                    <span>C:\Users\Ravikumar RD\AppData\Local\Temp\testng-eclipse-1406042120\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,6 +104,16 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="StockExchange.BaseStock" class="method navigator-link" hash-for-method="openingAboutNSE">openingAboutNSE</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="StockExchange.BaseStock" class="method navigator-link" hash-for-method="openingInvest">openingInvest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="StockExchange.BaseStock" class="method navigator-link" hash-for-method="openingList">openingList</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -131,12 +141,26 @@
                   <span class="method-name">openingAboutNSE</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="openingInvest">
+                  </a> <!-- openingInvest -->
+                  <span class="method-name">openingInvest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="openingList">
+                  </a> <!-- openingList -->
+                  <span class="method-name">openingList</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Ravikumar RD\AppData\Local\Temp\testng-eclipse-273425783\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Ravikumar RD\AppData\Local\Temp\testng-eclipse-1406042120\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -185,16 +209,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'openingAboutNSE')
 data.setCell(0, 2, 'StockExchange.BaseStock')
-data.setCell(0, 3, 116596);
+data.setCell(0, 3, 27523);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'openingInvest')
+data.setCell(1, 2, 'StockExchange.BaseStock')
+data.setCell(1, 3, 5748);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'openingList')
+data.setCell(2, 2, 'StockExchange.BaseStock')
+data.setCell(2, 3, 3141);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 36 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -224,6 +256,14 @@ return data;
               <div class="test-method">
                 <span class="method-name">openingAboutNSE</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">openingInvest</span>
+                <span class="method-start">27530 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">openingList</span>
+                <span class="method-start">33281 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
