--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Ravikumar RD\AppData\Local\Temp\testng-eclipse-1406042120\testng-customsuite.xml</span>
+                    <span>C:\Users\Ravikumar RD\AppData\Local\Temp\testng-eclipse-203795110\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -160,7 +160,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Ravikumar RD\AppData\Local\Temp\testng-eclipse-1406042120\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Ravikumar RD\AppData\Local\Temp\testng-eclipse-203795110\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -213,20 +213,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'openingAboutNSE')
 data.setCell(0, 2, 'StockExchange.BaseStock')
-data.setCell(0, 3, 27523);
+data.setCell(0, 3, 5437);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'openingInvest')
 data.setCell(1, 2, 'StockExchange.BaseStock')
-data.setCell(1, 3, 5748);
+data.setCell(1, 3, 2341);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'openingList')
 data.setCell(2, 2, 'StockExchange.BaseStock')
-data.setCell(2, 3, 3141);
+data.setCell(2, 3, 1904);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 36 seconds</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -253,18 +253,26 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">StockExchange.BaseStock</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">initialization</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">openingAboutNSE</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-start">8151 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">openingInvest</span>
-                <span class="method-start">27530 ms</span>
+                <span class="method-start">13597 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">openingList</span>
-                <span class="method-start">33281 ms</span>
+                <span class="method-start">15940 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-test after">
+                <span class="method-name">close</span>
+                <span class="method-start">17852 ms</span>
+              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
