--- a/Reports/AutomationResult.html
+++ b/Reports/AutomationResult.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">National Stock Exchange Results</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Oct 19, 2025 04:19:07 pm</span></a>
+<a href="#"><span class="badge badge-primary">Oct 19, 2025 06:38:26 pm</span></a>
 </li>
 </ul>
 </div>
@@ -87,7 +87,7 @@
           <div class="test-detail">
             <p class="name">openingAboutNSE</p>
             <p class="text-sm">
-              <span>4:19:21 pm</span> / <span>00:00:06:279</span>
+              <span>6:38:33 pm</span> / <span>00:00:04:170</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -96,9 +96,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">openingAboutNSE</h5>
-<span class='badge badge-success'>10.19.2025 4:19:21 pm</span>
-<span class='badge badge-danger'>10.19.2025 4:19:27 pm</span>
-<span class='badge badge-default'>00:00:06:279</span>
+<span class='badge badge-success'>10.19.2025 6:38:33 pm</span>
+<span class='badge badge-danger'>10.19.2025 6:38:37 pm</span>
+<span class='badge badge-default'>00:00:04:170</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -111,7 +111,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>4:19:27 pm</td>
+        <td>6:38:37 pm</td>
         <td>
           Test Passed
         </td>
@@ -128,7 +128,7 @@
           <div class="test-detail">
             <p class="name">openingList</p>
             <p class="text-sm">
-              <span>4:19:27 pm</span> / <span>00:00:03:398</span>
+              <span>6:38:37 pm</span> / <span>00:00:02:807</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -137,9 +137,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">openingList</h5>
-<span class='badge badge-success'>10.19.2025 4:19:27 pm</span>
-<span class='badge badge-danger'>10.19.2025 4:19:31 pm</span>
-<span class='badge badge-default'>00:00:03:398</span>
+<span class='badge badge-success'>10.19.2025 6:38:37 pm</span>
+<span class='badge badge-danger'>10.19.2025 6:38:40 pm</span>
+<span class='badge badge-default'>00:00:02:807</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -152,7 +152,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>4:19:31 pm</td>
+        <td>6:38:40 pm</td>
         <td>
           Test Passed
         </td>
@@ -169,7 +169,7 @@
           <div class="test-detail">
             <p class="name">openingInvest</p>
             <p class="text-sm">
-              <span>4:19:31 pm</span> / <span>00:00:03:617</span>
+              <span>6:38:40 pm</span> / <span>00:00:02:841</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -178,9 +178,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">openingInvest</h5>
-<span class='badge badge-success'>10.19.2025 4:19:31 pm</span>
-<span class='badge badge-danger'>10.19.2025 4:19:34 pm</span>
-<span class='badge badge-default'>00:00:03:617</span>
+<span class='badge badge-success'>10.19.2025 6:38:40 pm</span>
+<span class='badge badge-danger'>10.19.2025 6:38:43 pm</span>
+<span class='badge badge-default'>00:00:02:841</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -201,14 +201,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>4:19:34 pm</td>
+        <td>6:38:42 pm</td>
         <td>
           <textarea readonly class="code-block">java.lang.AssertionError: The following asserts failed:
 	expected [NSE - National Stock Exchange of India Ltd: Live Share/Stock Market News &amp; Updates, Quotes- Nseindia.com] but found [Overview],
 	expected [NSE - National Stock Exchange of India Ltd: Live Share/Stock Market News &amp; Updates, Quotes- Nseindia.com] but found [Stamp Duty, Compliance for Trading Members - NSE India]
 	at org.testng.asserts.SoftAssert.assertAll(SoftAssert.java:46)
 	at org.testng.asserts.SoftAssert.assertAll(SoftAssert.java:30)
-	at StockExchange.HomePage.openingInvest(HomePage.java:93)
+	at StockExchange.HomePage.openingInvest(HomePage.java:96)
 	at StockExchange.BaseStock.openingInvest(BaseStock.java:66)
 	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
 	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
@@ -233,9 +233,13 @@
 	at org.testng.TestNG.runSuitesLocally(TestNG.java:1208)
 	at org.testng.TestNG.runSuites(TestNG.java:1112)
 	at org.testng.TestNG.run(TestNG.java:1079)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:293)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:91)
+	at org.apache.maven.surefire.testng.TestNGExecutor.run(TestNGExecutor.java:308)
+	at org.apache.maven.surefire.testng.TestNGXmlTestSuite.execute(TestNGXmlTestSuite.java:71)
+	at org.apache.maven.surefire.testng.TestNGProvider.invoke(TestNGProvider.java:113)
+	at org.apache.maven.surefire.booter.ForkedBooter.runSuitesInProcess(ForkedBooter.java:385)
+	at org.apache.maven.surefire.booter.ForkedBooter.execute(ForkedBooter.java:162)
+	at org.apache.maven.surefire.booter.ForkedBooter.run(ForkedBooter.java:507)
+	at org.apache.maven.surefire.booter.ForkedBooter.main(ForkedBooter.java:495)
 </textarea>
           
         </td>
@@ -252,7 +256,7 @@
           <div class="test-detail">
             <p class="name">testFailExample</p>
             <p class="text-sm">
-              <span>4:19:34 pm</span> / <span>00:00:01:765</span>
+              <span>6:38:43 pm</span> / <span>00:00:00:949</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -261,9 +265,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">testFailExample</h5>
-<span class='badge badge-success'>10.19.2025 4:19:34 pm</span>
-<span class='badge badge-danger'>10.19.2025 4:19:36 pm</span>
-<span class='badge badge-default'>00:00:01:765</span>
+<span class='badge badge-success'>10.19.2025 6:38:43 pm</span>
+<span class='badge badge-danger'>10.19.2025 6:38:44 pm</span>
+<span class='badge badge-default'>00:00:00:949</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -276,7 +280,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>4:19:36 pm</td>
+        <td>6:38:44 pm</td>
         <td>
           Test Passed
         </td>
@@ -327,7 +331,7 @@
 <tbody>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>16:19:31 pm</td>
+<td>18:38:40 pm</td>
 <td>
 <a href="#" class="linked" test-id='3' id='3'>openingInvest</a>
 </td>
@@ -349,13 +353,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Oct 19, 2025 04:19:07 pm</h3>
+<h3>Oct 19, 2025 06:38:26 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Oct 19, 2025 04:19:37 pm</h3>
+<h3>Oct 19, 2025 06:38:45 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -425,7 +429,7 @@
 </div></div>
 <script>
 var timeline = {
-"openingAboutNSE":6.279,"openingList":3.398,"openingInvest":3.617,"testFailExample":1.765
+"openingAboutNSE":4.17,"openingList":2.807,"openingInvest":2.841,"testFailExample":0.949
 };
 </script>
 <div class="row">
