Failing two test cases is fixed in this time.

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,24 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num attn">2</td><td class="num">18,360</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">52,746</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="2">StockExchange.BaseStock</td><td><a href="#m0">openingInvest</a></td><td rowspan="1">1760888192611</td><td rowspan="1">2764</td></tr><tr class="failedeven"><td><a href="#m1">openingList</a></td><td rowspan="1">1760888189476</td><td rowspan="1">2807</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">StockExchange.BaseStock</td><td><a href="#m2">openingAboutNSE</a></td><td rowspan="1">1760888185165</td><td rowspan="1">4301</td></tr><tr class="passedeven"><td><a href="#m3">testFailExample</a></td><td rowspan="1">1760888195640</td><td rowspan="1">1303</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">StockExchange.BaseStock</td><td><a href="#m0">openingAboutNSE</a></td><td rowspan="1">1760889637083</td><td rowspan="1">10613</td></tr><tr class="passedeven"><td><a href="#m1">openingInvest</a></td><td rowspan="1">1760889657284</td><td rowspan="1">9556</td></tr><tr class="passedeven"><td><a href="#m2">openingList</a></td><td rowspan="1">1760889647713</td><td rowspan="1">9565</td></tr><tr class="passedeven"><td><a href="#m3">testFailExample</a></td><td rowspan="1">1760889666844</td><td rowspan="1">1700</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">StockExchange.BaseStock#openingInvest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
-	expected [NSE - National Stock Exchange of India Ltd: Live Share/Stock Market News &amp;amp; Updates, Quotes- Nseindia.com] but found [Overview],
-	expected [NSE - National Stock Exchange of India Ltd: Live Share/Stock Market News &amp;amp; Updates, Quotes- Nseindia.com] but found [Stamp Duty, Compliance for Trading Members - NSE India]
-	at StockExchange.HomePage.openingInvest(HomePage.java:99)
-	at StockExchange.BaseStock.openingInvest(BaseStock.java:66)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">StockExchange.BaseStock#openingList</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
-	expected [NSE - National Stock Exchange of India Ltd: Live Share/Stock Market News &amp;amp; Updates, Quotes- Nseindia.com] but found [Overview]
-	at StockExchange.HomePage.openingList(HomePage.java:83)
-	at StockExchange.BaseStock.openingList(BaseStock.java:59)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">StockExchange.BaseStock#openingAboutNSE</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">StockExchange.BaseStock#openingAboutNSE</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">StockExchange.BaseStock#openingInvest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">StockExchange.BaseStock#openingList</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m3">StockExchange.BaseStock#testFailExample</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
