--- a/test-output/index.html
+++ b/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 2 failed tests</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Suite" class="navigator-link">
-              <span class="suite-name border-failed">Suite</span>
+              <span class="suite-name border-passed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -92,26 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods, 2 failed,   2 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Suite" class="hide-methods failed suite-Suite"> (hide)</a> <!-- hide-methods failed suite-Suite -->
-                      <a href="#" panel-name="suite-Suite" class="show-methods failed suite-Suite"> (show)</a> <!-- show-methods failed suite-Suite -->
-                    </span>
-                    <div class="method-list-content failed suite-Suite">
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="StockExchange.BaseStock" class="method navigator-link" hash-for-method="openingInvest">openingInvest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="StockExchange.BaseStock" class="method navigator-link" hash-for-method="openingList">openingList</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-Suite -->
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -123,6 +104,16 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Suite" title="StockExchange.BaseStock" class="method navigator-link" hash-for-method="openingAboutNSE">openingAboutNSE</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="StockExchange.BaseStock" class="method navigator-link" hash-for-method="openingInvest">openingInvest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="StockExchange.BaseStock" class="method navigator-link" hash-for-method="openingList">openingList</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -142,43 +133,6 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
-          <div class="suite-Suite-class-failed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">StockExchange.BaseStock</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="openingInvest">
-                  </a> <!-- openingInvest -->
-                  <span class="method-name">openingInvest</span>
-                  <div class="stack-trace">java.lang.AssertionError: The following asserts failed:
-	expected [NSE - National Stock Exchange of India Ltd: Live Share/Stock Market News &amp;amp; Updates, Quotes- Nseindia.com] but found [Overview],
-	expected [NSE - National Stock Exchange of India Ltd: Live Share/Stock Market News &amp;amp; Updates, Quotes- Nseindia.com] but found [Stamp Duty, Compliance for Trading Members - NSE India]
-	at StockExchange.HomePage.openingInvest(HomePage.java:99)
-	at StockExchange.BaseStock.openingInvest(BaseStock.java:66)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 27 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="openingList">
-                  </a> <!-- openingList -->
-                  <span class="method-name">openingList</span>
-                  <div class="stack-trace">java.lang.AssertionError: The following asserts failed:
-	expected [NSE - National Stock Exchange of India Ltd: Live Share/Stock Market News &amp;amp; Updates, Quotes- Nseindia.com] but found [Overview]
-	at StockExchange.HomePage.openingList(HomePage.java:83)
-	at StockExchange.BaseStock.openingList(BaseStock.java:59)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 27 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-failed -->
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -190,6 +144,20 @@
                   <a name="openingAboutNSE">
                   </a> <!-- openingAboutNSE -->
                   <span class="method-name">openingAboutNSE</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="openingInvest">
+                  </a> <!-- openingInvest -->
+                  <span class="method-name">openingInvest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="openingList">
+                  </a> <!-- openingList -->
+                  <span class="method-name">openingList</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -260,24 +228,24 @@ data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'openingAboutNSE')
 data.setCell(0, 2, 'StockExchange.BaseStock')
-data.setCell(0, 3, 4301);
+data.setCell(0, 3, 10613);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'openingList')
 data.setCell(1, 2, 'StockExchange.BaseStock')
-data.setCell(1, 3, 2807);
+data.setCell(1, 3, 9565);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'openingInvest')
 data.setCell(2, 2, 'StockExchange.BaseStock')
-data.setCell(2, 3, 2764);
+data.setCell(2, 3, 9556);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'testFailExample')
 data.setCell(3, 2, 'StockExchange.BaseStock')
-data.setCell(3, 3, 1303);
+data.setCell(3, 3, 1700);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 11 seconds</span>
+              <span class="suite-total-time">Total running time: 31 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -310,27 +278,23 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">openingAboutNSE</span>
-                <span class="method-start">6216 ms</span>
+                <span class="method-start">20762 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">openingList</span>
-                <span class="method-start">10527 ms</span>
+                <span class="method-start">31392 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">openingInvest</span>
-                <span class="method-start">13662 ms</span>
+                <span class="method-start">40963 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testFailExample</span>
-                <span class="method-start">16691 ms</span>
+                <span class="method-start">50523 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">close</span>
-                <span class="method-start">17999 ms</span>
+                <span class="method-start">52232 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
